data/derived/comb/progs/unify/prog2301.ml.out
Characters 136-172:
  buildSine( build(rand, depth - 1) );
  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         unit
